added analytics script

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EVW8MLYPV"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3EVW8MLYPV');
+    </script>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+
     <script src="https://kit.fontawesome.com/36c1d4a9bc.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
@@ -47,7 +59,7 @@
 
         </div>
         <div class="scroll-down">
-            <i class="fa-solid fa-angle-down"></i>
+            <a href="#about"><i class="fa-solid fa-angle-down"></i></a>
         </div>
     </section>
 
