--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Khomotso</div>
                 <div class="text-3">And I am a <span class="typing"></span></div>
-                <a href="#work">View Projects</a>
+                <a href="#work">Projects</a>
+                <a href="./Khomotso resume.pdf" target="_blank">Resume</a>
             </div>
 
         </div>
@@ -72,11 +73,8 @@
                     <img src="images/profile3.jpeg" alt="khomotso-portrait-img">
                 </div>
                 <div class="column right">
-                    <p class="text"> I am a Web Developer currently studying Computer Science part-time.
-                        I enjoy learning new progamming technologies and I am able to grasp new concepts without much dificulty. My interests are mainly towards Backend
-                        Web Development and Cloud practice.
-                        I always strive to deliver quality solutions to any problem that I need to solve to the highest
-                        standard.
+                    <p class="text">I am a Web Developer currently studying Computer Science part-time. I enjoy learning new programming technologies. I have a superior capacity for understanding new ideas and concepts quickly. I aim to deliver quality solutions to problems that I am required to solve with the highest standard.
+
                     </p>
                 </div>
             </div>
@@ -128,7 +126,7 @@
              <span class="work-item" data-filter=".node">Node</span> 
         </div>
 
-        <div class="work-container container grid">
+        <div class="work-container container">
             <div class="work-card mix all">
                 <img src="images/projects/Simon_Game.jpg" alt="simon game img" class="work-img">
                 <h3 class="work-title">Simon Game</h3>
@@ -142,9 +140,26 @@
                         <li>Created - <span>23 Jan 2022</span></li>
                         <li>Technologies - <span>Javascrtipt, HTML, CSS </span></li>
                     </ul>
-                    <a href="https://khomotsotibane.github.io/SimonGame/" class="view-live">Demo</a>
+                    <a href="https://khomotsotibane.github.io/SimonGame/" class="view-live">View Project</a>
                 </div>
             </div>
+
+                <div class="work-card mix all">
+                    <img src="images/projects/tictactoe.png" alt="tic tac toe game img" class="work-img">
+                    <h3 class="work-title">Tic Tac Toe</h3>
+                    <span class="work-button">more info
+                        <i class="fa-solid fa-arrow-right work-button-icon"></i>
+                    </span>
+                    <div class="portfolio-item-details">
+                        <h3 class="details-title">Mini Game</h3>
+                        <p class="details-description">A simple tic tac toe game</p>
+                        <ul class="details-info">
+                            <li>Created - <span>20 May 2022</span></li>
+                            <li>Technologies - <span>Javascrtipt, HTML, CSS </span></li>
+                        </ul>
+                        <a href="https://khomotsotibane.github.io/TicTacToe/" class="view-live">Demo</a>
+                    </div>
+                </div>
 
             <div class="work-card mix node">
                 <img src="images/projects/todolist.jpg" alt="todo List img" class="work-img">
@@ -154,12 +169,12 @@
                 </span>
                 <div class="portfolio-item-details">
                     <h3 class="details-title">Todo List</h3>
-                    <p class="details-description">A todo list app that is connected to a databse for list storage.</p>
+                    <p class="details-description">A todo list app that that is connected to a database.</p>
                     <ul class="details-info">
                         <li>Created - <span>4 Mar 2022</span></li>
                         <li>Technologies - <span>html, css, javascript, node, mongo db</span></li>
                     </ul>
-                    <a href="https://fathomless-reaches-13664.herokuapp.com/" class="view-live">Demo</a>
+                    <a href="https://fathomless-reaches-13664.herokuapp.com/" class="view-live">View Project</a>
                 </div>
             </div>
 
@@ -170,30 +185,48 @@
                     <i class="fa-solid fa-arrow-right work-button-icon"></i>
                 </span>
                 <div class="portfolio-item-details">
-                    <h3 class="details-title">Wordle clone</h3>
-                    <p class="details-description">A word guessing game that will surely keep you on your toes.</p>
+                    <h3 class="details-title">Word Guess (Wordle)</h3>
+                    <p class="details-description">A clone of the populsr word guessing 'Wordle' that will surely keep you on your toes.</p>
                     <ul class="details-info">
                         <li>Created - <span>28 Apr 2022</span></li>
                         <li>Technologies - <span>react</span></li>
                     </ul>
-                    <a href="https://salty-scrubland-87651.herokuapp.com/" class="view-live">Demo</a>
+                    <a href="https://salty-scrubland-87651.herokuapp.com/" class="view-live">View Project</a>
+                </div>
+            </div>
+
+            <div class="work-card mix react">
+                <img src="images/projects/noteTracker.png" alt="study cards img" class="work-img">
+                <h3 class="work-title">Note Tracker</h3>
+                <span class="work-button">more info
+                    <i class="fa-solid fa-arrow-right work-button-icon"></i>
+                </span>
+                <div class="portfolio-item-details">
+                    <h3 class="details-title">Note Tracker</h3>
+                    <p class="details-description">A simple note taking app</p>
+                    <ul class="details-info">
+                        <li>Created - <span>31 May 2022</span></li>
+                        <li>Technologies - <span>react</span></li>
+                    </ul>
+                    <a href=" https://khomotsotibane.github.io/NoteTracker/" class="view-live">View Projcet</a>
                 </div>
             </div>
 
             <div class="work-card mix react">
                 <img src="images/projects/studyCards.png" alt="study cards img" class="work-img">
-                <h3 class="work-title">Study Flash Cards</h3>
+                <h3 class="work-title">Study Cards</h3>
                 <span class="work-button">more info
                     <i class="fa-solid fa-arrow-right work-button-icon"></i>
                 </span>
                 <div class="portfolio-item-details">
                     <h3 class="details-title">Study Cards</h3>
-                    <p class="details-description">A flashcards app that you can use to notes and help improve your studies</p>
+                    <p class="details-description">A flashcard app that allows a user to notes that can be view in the form of flashcards
+                        to help improve your studying</p>
                     <ul class="details-info">
-                        <li>Created - <span>31 May 2022</span></li>
-                        <li>Technologies - <span>react</span></li>
+                        <li>Created - <span>07 Aug 2022</span></li>
+                        <li>Technologies - <span>react, mongoDb, nodejs</span></li>
                     </ul>
-                    <a href=" https://khomotsotibane.github.io/StudyCardsApp/" class="view-live">Demo</a>
+                    <a href="https://sweet-biscotti-3d0038.netlify.app/" class="view-live">View Project</a>
                 </div>
             </div>
         </div>
