adding repo links

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
              <span class="work-item" data-filter=".node">Node</span> 
         </div>
 
-        <div class="work-container container">
+        <div class="work-container container grid">
             <div class="work-card mix all">
                 <img src="images/projects/Simon_Game.jpg" alt="simon game img" class="work-img">
                 <h3 class="work-title">Simon Game</h3>
