--- a/index.html
+++ b/index.html
@@ -124,9 +124,29 @@
             <span class="work-item active-work" data-filter="all">All</span>
             <span class="work-item" data-filter=".react">React</span> 
              <span class="work-item" data-filter=".node">Node</span> 
+             <span class="work-item" data-filter=".typescript">Typescript</span> 
         </div>
 
         <div class="work-container container grid">
+
+            <div class="work-card mix react">
+                <img src="images/projects/weather.png" alt="word guess img" class="work-img">
+                <h3 class="work-title">Weather App</h3>
+                <span class="work-button">more info
+                    <i class="fa-solid fa-arrow-right work-button-icon"></i>
+                </span>
+                <div class="portfolio-item-details">
+                    <h3 class="details-title">Weather App</h3>
+                    <p class="details-description">A simple weather app that allows you to enter your location to check the weather</p>
+                    <ul class="details-info">
+                        <li>Created - <span>05 May 2022</span></li>
+                        <li>Technologies - <span>react</span></li>
+                        <li>Status - <span>completed</span></li>
+                    </ul>
+                    <a href="https://playful-frangipane-09943a.netlify.app/" class="view-live">View Project</a>
+                </div>
+            </div>
+
             <div class="work-card mix all">
                 <img src="images/projects/Simon_Game.jpg" alt="simon game img" class="work-img">
                 <h3 class="work-title">Simon Game</h3>
@@ -139,44 +159,51 @@
                     <ul class="details-info">
                         <li>Created - <span>23 Jan 2022</span></li>
                         <li>Technologies - <span>Javascrtipt, HTML, CSS </span></li>
+                        <li>Status - <span>completed</span></li>
                     </ul>
                     <a href="https://khomotsotibane.github.io/SimonGame/" class="view-live">View Project</a>
                 </div>
             </div>
 
-                <div class="work-card mix all">
-                    <img src="images/projects/tictactoe.png" alt="tic tac toe game img" class="work-img">
-                    <h3 class="work-title">Tic Tac Toe</h3>
+             
+
+                <div class="work-card mix react">
+                    <img src="images/projects/todolist.png" alt="todo List img" class="work-img">
+                    <h3 class="work-title">Todo List</h3>
                     <span class="work-button">more info
                         <i class="fa-solid fa-arrow-right work-button-icon"></i>
                     </span>
                     <div class="portfolio-item-details">
-                        <h3 class="details-title">Mini Game</h3>
-                        <p class="details-description">A simple tic tac toe game</p>
+                        <h3 class="details-title">Todo List</h3>
+                        <p class="details-description">A todo list app</p>
                         <ul class="details-info">
-                            <li>Created - <span>20 May 2022</span></li>
-                            <li>Technologies - <span>Javascrtipt, HTML, CSS </span></li>
+                            <li>Created - <span>4 Mar 2022</span></li>
+                            <li>Technologies - <span>react</span></li>
+                            <li>Status - <span>completed</span></li>
                         </ul>
-                        <a href="https://khomotsotibane.github.io/TicTacToe/" class="view-live">Demo</a>
+                        <a href="https://starlit-croissant-325d41.netlify.app/" class="view-live">View Project</a>
                     </div>
                 </div>
 
-            <div class="work-card mix node">
-                <img src="images/projects/todolist.jpg" alt="todo List img" class="work-img">
-                <h3 class="work-title">Todo List</h3>
-                <span class="work-button">more info
-                    <i class="fa-solid fa-arrow-right work-button-icon"></i>
-                </span>
-                <div class="portfolio-item-details">
-                    <h3 class="details-title">Todo List</h3>
-                    <p class="details-description">A todo list app that that is connected to a database.</p>
-                    <ul class="details-info">
-                        <li>Created - <span>4 Mar 2022</span></li>
-                        <li>Technologies - <span>html, css, javascript, node, mongo db</span></li>
-                    </ul>
-                    <a href="https://fathomless-reaches-13664.herokuapp.com/" class="view-live">View Project</a>
+                <div class="work-card mix react">
+                    <img src="images/projects/studyCards.png" alt="study cards img" class="work-img">
+                    <h3 class="work-title">Study Cards</h3>
+                    <span class="work-button">more info
+                        <i class="fa-solid fa-arrow-right work-button-icon"></i>
+                    </span>
+                    <div class="portfolio-item-details">
+                        <h3 class="details-title">Study Cards</h3>
+                        <p class="details-description">A flashcard app that allows a user to notes that can be view in the form of flashcards
+                            to help improve your studying</p>
+                        <ul class="details-info">
+                            <li>Created - <span>07 Aug 2022</span></li>
+                            <li>Technologies - <span>react, mongoDb, nodejs</span></li>
+                            <li>Status - <span>in progress</span></li>
+                        </ul>
+                        <a href="https://sweet-biscotti-3d0038.netlify.app/" class="view-live">View Project</a>
+                    </div>
                 </div>
-            </div>
+
 
             <div class="work-card mix react">
                 <img src="images/projects/wordGuess.png" alt="word guess img" class="work-img">
@@ -190,8 +217,9 @@
                     <ul class="details-info">
                         <li>Created - <span>28 Apr 2022</span></li>
                         <li>Technologies - <span>react</span></li>
+                        <li>Status - <span>completed</span></li>
                     </ul>
-                    <a href="https://salty-scrubland-87651.herokuapp.com/" class="view-live">View Project</a>
+                    <a href="https://playful-frangipane-09943a.netlify.app/" class="view-live">View Project</a>
                 </div>
             </div>
 
@@ -207,28 +235,49 @@
                     <ul class="details-info">
                         <li>Created - <span>31 May 2022</span></li>
                         <li>Technologies - <span>react</span></li>
+                        <li>Status - <span>completed</span></li>
                     </ul>
                     <a href=" https://khomotsotibane.github.io/NoteTracker/" class="view-live">View Projcet</a>
                 </div>
             </div>
 
-            <div class="work-card mix react">
-                <img src="images/projects/studyCards.png" alt="study cards img" class="work-img">
-                <h3 class="work-title">Study Cards</h3>
+            <div class="work-card mix typescript">
+                <img src="images/projects/picnic.png" alt="tic tac toe game img" class="work-img">
+                <h3 class="work-title">Picnic Shop</h3>
                 <span class="work-button">more info
                     <i class="fa-solid fa-arrow-right work-button-icon"></i>
                 </span>
                 <div class="portfolio-item-details">
-                    <h3 class="details-title">Study Cards</h3>
-                    <p class="details-description">A flashcard app that allows a user to notes that can be view in the form of flashcards
-                        to help improve your studying</p>
+                    <h3 class="details-title">Picnic Shop</h3>
+                    <p class="details-description">A catering website for picnics</p>
                     <ul class="details-info">
-                        <li>Created - <span>07 Aug 2022</span></li>
-                        <li>Technologies - <span>react, mongoDb, nodejs</span></li>
+                        <li>Created - <span>20 May 2022</span></li>
+                        <li>Technologies - <span>Typescript</span></li>
+                        <li>Status - <span>in progresss</span></li>
                     </ul>
-                    <a href="https://sweet-biscotti-3d0038.netlify.app/" class="view-live">View Project</a>
+                    <a href=" https://imaginative-dodol-47a3da.netlify.app/" class="view-live">View Project</a>
                 </div>
             </div>
+
+            <div class="work-card mix all">
+                <img src="images/projects/tictactoe.png" alt="tic tac toe game img" class="work-img">
+                <h3 class="work-title">Tic Tac Toe</h3>
+                <span class="work-button">more info
+                    <i class="fa-solid fa-arrow-right work-button-icon"></i>
+                </span>
+                <div class="portfolio-item-details">
+                    <h3 class="details-title">Mini Game</h3>
+                    <p class="details-description">A simple tic tac toe game</p>
+                    <ul class="details-info">
+                        <li>Created - <span>20 May 2022</span></li>
+                        <li>Technologies - <span>Javascrtipt, HTML, CSS </span></li>
+                        <li>Status - <span>completed</span></li>
+                    </ul>
+                    <a href="https://khomotsotibane.github.io/TicTacToe/" class="view-live">View Project</a>
+                </div>
+            </div>
+
+           
         </div>
     </section>
 
